--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
     "main": "src/index.js",
     "scripts": {
         "start": "webpack-dev-server --mode development",
+        "build": "webpack --mode production",
         "lint": "eslint .",
-        "test": "jest"
+        "test": "jest",
+        "coverage": "jest --coverage",
+        "preshow:coverage": "npm run coverage",
+        "show:coverage": "live-server coverage/lcov-report",
+        "preshow:dist": "npm run build",
+        "show:dist": "live-server dist"
     },
     "author": "fdm1try",
     "license": "ISC",
