--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,5 +28,6 @@ on_success: # скрипт деплоя
   - ps: Set-Content -Path "$HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewline
   - git config --global user.email "d.a.fedorov90@gmail.com"
   - git config --global user.name "fdm1try"
+  - git branch gh-pages
   - git add dist
   - git subtree push --prefix dist orogin gh-pages
