--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,8 +28,8 @@ on_success: # скрипт деплоя
   - ps: Set-Content -Path "$HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewline
   - git config --global user.email "d.a.fedorov90@gmail.com"
   - git config --global user.name "fdm1try"
+  - git push origin --delete gh-pages & exit 0
   - git branch gh-pages
-  - git pull
   - git add dist
   - git commit -m 'dist added'
   - git subtree push --prefix dist origin gh-pages
