--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "webpack-dev-server --mode development",
         "build": "webpack --mode production",
+        "deploy": "psuh-dir --dir dist --branch=gh-pages --cleanup",
         "lint": "eslint .",
         "test": "jest",
         "coverage": "jest --coverage",
@@ -24,6 +25,7 @@
         "css-loader": "^6.8.1",
         "eslint": "^8.46.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "gh-pages": "^6.0.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.3",
         "jest": "^29.6.2",
