--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jest-environment-jsdom": "^29.6.2",
         "jsdom": "^22.1.0",
         "mini-css-extract-plugin": "^2.7.6",
+        "push-dir": "^0.4.1",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
