--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "webpack-dev-server --mode development",
         "build": "webpack --mode production",
-        "deploy": "push-dir --dir dist --branch=gh-pages --cleanup",
+        "deploy": "push-dir --dir dist --branch=gh-pages --cleanup --force",
         "lint": "eslint .",
         "test": "jest",
         "coverage": "jest --coverage",
